# work-timer

./: LICENSE  README.md  lci.toml  lefthook.yml  pyproject.toml  work_timer.py
scripts/: local_install.sh  run_dev_app.sh  run_dev_with_prod_settings.sh  run_dev_wtctl.sh  run_prod_app.sh  textual_console.sh
src/: taskdb.py  taskdb_test.py  timer.py
src/utils/: profiling.py
src/work_timer/: cli.py  config.py  design-thoughts.md  planning.py  planning_test.py  run_dev.sh  run_dev_app.sh  run_dev_wtctl.sh  taskdb.py  taskdb_test.py  timelog.py  timelog_test.py  timer.py  timer_test.py  wtctl.py
src/work_timer/taskdb/: __init__.py  base.py  persistence.py  persistence_test.py  task.py  taskdb_test.py
src/work_timer/taskdb/migrations/: v1_to_v2.py  v2_to_v3.py  v3_to_v4.py
src/work_timer/timer/: __init__.py  motivators.py  single_task_timer.py  single_task_timer_test.py  timer.py  timer_test.py
src/work_timer/ui/: app.py  base_task_list.py  debug_panel.py  dialogs.py  explorer.py  explorer.tcss  planning.py  task_editor.py  task_editor.tcss  task_editor_test.py  task_list.py  task_list_test.py  timer.py  timer.tcss  timer_test.py  timer_ui.py  timer_ui.tcss  timer_ui_test.py  timer_widget.py  timer_widget.tcss  timer_widget_test.py  ui_testing.py
src/work_timer/ui/features/: task_list.feature  task_list_test.py
src/work_timer/utils/: callback_spaghetti.md  clock.py  fake_tasks.py  profiling.py  profiling_test.py  scheduler.py  scheduler_test.py  state_machine.py  state_machine_test.py  testing.py  testing_test.py  time.py  typing.py
(+8 files in other folders)
