[project]
name = "work_timer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Kirill Spitsyn", email = "k@spitsyn.me"},
]
dependencies = ["pytest>=8.3.3"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
